[gd_scene load_steps=2 format=3 uid="uid://suufrxtls4xf"]

[ext_resource type="Script" uid="uid://dmqlm0rmtjc07" path="res://Scripts/player_controls.gd" id="1_4flbx"]

[node name="Player" type="Node2D"]
script = ExtResource("1_4flbx")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
clip_contents = true
offset_right = 461.0
offset_bottom = 172.0
size_flags_horizontal = 3
alignment = 1

[node name="Amplitude" type="VSlider" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -3.0
max_value = 3.0
step = 0.001

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Wavelength" type="HSlider" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 0.5
max_value = 3.0
step = 0.001
value = 1.5

[node name="Offset" type="HSlider" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 12.0
step = 0.001
value = 5.0

[connection signal="drag_ended" from="HBoxContainer/Amplitude" to="." method="_on_amplitude_drag_ended"]
[connection signal="drag_started" from="HBoxContainer/Amplitude" to="." method="_on_amplitude_drag_started"]
[connection signal="drag_ended" from="HBoxContainer/VBoxContainer/Wavelength" to="." method="_on_wavelength_drag_ended"]
[connection signal="drag_started" from="HBoxContainer/VBoxContainer/Wavelength" to="." method="_on_wavelength_drag_started"]
[connection signal="drag_ended" from="HBoxContainer/VBoxContainer/Offset" to="." method="_on_offset_drag_ended"]
[connection signal="drag_started" from="HBoxContainer/VBoxContainer/Offset" to="." method="_on_offset_drag_started"]
